--- a/templates/home.html
+++ b/templates/home.html
@@ -23,23 +23,21 @@
 
 <section class="upcoming-events">
     <h2>Upcoming Events</h2>
-    <ul>
+    <div class="events-grid">
         {% for gig in gigs %}
-        <li>
-            <h3>{{ gig.date }} - {{ gig.venue }}</h3>
-            <p>{{ gig.city }}</p>
-        </li>
+        <div class="event-card">
+            <img src="{{ url_for('static', filename='images/event_placeholder.png') }}" alt="Event Image">
+            <div class="event-details">
+                <h3>{{ gig.date }} - {{ gig.venue }}</h3>
+                <p>{{ gig.city }}</p>
+                <button class="share-button">Share This Event</button>
+            </div>
+        </div>
         {% endfor %}
-    </ul>
-</section>
-
-<section class="social-sharing">
-    <h2>Share Our Events</h2>
-    <p>Spread the word about BuNker11! Share our events on your favorite social media platforms.</p>
-    <div class="social-buttons">
-        <a href="https://facebook.com" target="_blank">Facebook</a>
-        <a href="https://twitter.com" target="_blank">Twitter</a>
-        <a href="https://instagram.com" target="_blank">Instagram</a>
     </div>
 </section>
+{% endblock %}
+
+{% block extra_js %}
+<script src="{{ url_for('static', filename='scripts/home.js') }}"></script>
 {% endblock %}
