--- a/templates/base.html
+++ b/templates/base.html
@@ -44,16 +44,17 @@
     </main>
 
     <footer>
-        <div class="footer-section">
+        <div class="footer-section address">
             <h4>Venue Info</h4>
-            <p>BuNker11<br>54-60 Heene Rd<br>Worthing, West Sussex, BN11 3RG</p>
+            <p class="full">BuNker11<br>54-60 Heene Rd<br>Worthing, West Sussex, BN11 3RG</p>
+            <p class="short">BuNker11<br>54-60 Heene Rd<br>Worthing</p>
         </div>
         <div class="footer-section">
             <h4>TOT Social Media</h4>
             <ul>
                 <li><a href="https://facebook.com" target="_blank"><img src="{{ url_for('static', filename='images/footer/facebook-icon.png') }}" alt="Facebook">Facebook</a></li>
                 <li><a href="https://instagram.com" target="_blank"><img src="{{ url_for('static', filename='images/footer/instagram-icon.png') }}" alt="Instagram">Instagram</a></li>
-                <li><a href="https://youtube.com" target="_blank"><img src="{{ url_for('static', filename='images/footer/youtube-icon.png') }}" alt="YouTube">Youtube</a></li>
+                <li><a href="https://youtube.com" target="_blank"><img src="{{ url_for('static', filename='images/footer/youtube-icon.png') }}" alt="YouTube">YouTube</a></li>
             </ul>
         </div>
         <div class="footer-section">
