--- a/templates/base.html
+++ b/templates/base.html
@@ -28,11 +28,11 @@
         </div>
         <nav>
             <ul>
-                <li><a href="{{ url_for('home') }}">Home</a></li>
-                <li><a href="{{ url_for('about') }}">About</a></li>
-                <li><a href="{{ url_for('past_events') }}">Past Events</a></li>
-                <li><a href="{{ url_for('contact') }}">Contact</a></li>
-                <li><a href="{{ url_for('accessibility') }}">Accessibility</a></li>
+                <li><a href="{{ url_for('home') }}" class="{% if request.endpoint == 'home' %}active{% endif %}">Home</a></li>
+                <li><a href="{{ url_for('about') }}" class="{% if request.endpoint == 'about' %}active{% endif %}">About</a></li>
+                <li><a href="{{ url_for('past_events') }}" class="{% if request.endpoint == 'past_events' %}active{% endif %}">Past Events</a></li>
+                <li><a href="{{ url_for('contact') }}" class="{% if request.endpoint == 'contact' %}active{% endif %}">Contact</a></li>
+                <li><a href="{{ url_for('accessibility') }}" class="{% if request.endpoint == 'accessibility' %}active{% endif %}">Accessibility</a></li>
             </ul>
         </nav>
     </header>
