--- a/templates/home.html
+++ b/templates/home.html
@@ -26,11 +26,21 @@
     <div class="events-grid">
         {% for gig in gigs %}
         <div class="event-card">
-            <img src="{{ url_for('static', filename='images/event_placeholder.png') }}" alt="Event Image">
+            <img src="{{ url_for('static', filename='images/event_placeholder.png') }}" alt="Event Image" class="event-image">
             <div class="event-details">
-                <h3>{{ gig.date }} - {{ gig.venue }}</h3>
-                <p>{{ gig.city }}</p>
-                <button class="share-button">Share This Event</button>
+                <h3 class="event-title">{{ gig.name }}</h3>
+                <hr class="event-divider">
+                <p class="event-time">{{ gig.date.strftime('%I:%M %p').lstrip('0') }}</p> <!-- Time in 12-hour format -->
+                <p class="event-date-text">{{ gig.formatted_date }}</p> <!-- Full date without time -->
+                <div class="event-bottom">
+                    <div class="event-countdown">
+                        <span class="countdown-text" data-date="{{ gig.date }}"></span>
+                    </div>
+                    <button class="share-button">
+                        <img src="{{ url_for('static', filename='images/share-icon.png') }}" alt="Share Icon">
+                        <span class="share-tooltip">Share</span>
+                    </button>
+                </div>
             </div>
         </div>
         {% endfor %}
