--- a/templates/base.html
+++ b/templates/base.html
@@ -19,12 +19,19 @@
     {% block extra_css %}
     <!-- Page-specific CSS will be included here -->
     {% endblock %}
-    <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}" type="image/x-icon">
+    
+    <!-- Favicons -->
+    <link rel="icon" href="{{ url_for('static', filename='images/favicon_io/favicon.ico') }}" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='images/favicon_io/apple-touch-icon.png') }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='images/favicon_io/favicon-32x32.png') }}">
+    <link rel="icon" type="image/png" sizes="192x192" href="{{ url_for('static', filename='images/favicon_io/android-chrome-192x192.png') }}">
+    <link rel="icon" type="image/png" sizes="512x512" href="{{ url_for('static', filename='images/favicon_io/android-chrome-512x512.png') }}">
+    <link rel="manifest" href="{{ url_for('static', filename='images/favicon_io/site.webmanifest') }}">
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="{{ url_for('static', filename='images/bunker11-logo.png') }}" alt="BuNker11 Logo">
+            <img src="{{ url_for('static', filename='images/bunker11_invis.png') }}" alt="BuNker11 Logo">
         </div>
         <nav>
             <ul>
