--- a/templates/home.html
+++ b/templates/home.html
@@ -29,17 +29,17 @@
 <section class="upcoming-events">
     <h2>Upcoming Events</h2>
     <div class="events-grid">
-        {% for gig in gigs %}
+        {% for event in events %}
         <div class="event-card">
-            <img src="{{ url_for('static', filename='images/placeholders/placeholder' + (loop.index % 3 + 2)|string + '.jpg') }}" alt="Event Image" class="event-image">
+            <img src="{{ url_for('static', filename=event.image_url) }}" alt="Event Image" class="event-image">
             <div class="event-details">
-                <h3 class="event-title">{{ gig.name }}</h3>
+                <h3 class="event-title">{{ event.title }}</h3>
                 <div class="spacer"></div>
             </div>
-            <p class="event-datetime">{{ gig.date.strftime('%I:%M %p').lstrip('0') }} - {{ gig.formatted_date }}</p>
+            <p class="event-datetime">{{ event.date.strftime('%I:%M %p').lstrip('0') }} - {{ event.formatted_date }}</p>
             <div class="event-bottom">
                 <div class="event-countdown">
-                    <span class="countdown-text" data-date="{{ gig.date }}"></span>
+                    <span class="countdown-text" data-date="{{ event.date }}"></span>
                 </div>
                 <button class="share-button">
                     <img src="{{ url_for('static', filename='images/icons/share-icon.png') }}" alt="Share Icon">
