--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,6 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
@@ -25,6 +24,12 @@
     <h2>Welcome to BuNker11</h2>
     <p>BuNker11 (BN11) is your go-to venue for live music, gigs, and unforgettable performances. Located in the basement of the Charles Dickens pub, we host monthly gigs featuring unique artists and bands. Stay tuned for upcoming events and explore our past performances.</p>
 </section>
+
+<!-- Barbed Wire Divider -->
+<div class="divider barbed-wire">
+  <img src="/static/images/barb2.png" alt="Barbed Wire Divider" />
+</div>
+
 
 <section class="upcoming-events">
     <h2>Upcoming Events</h2>
