--- a/static/css/past_events.css
+++ b/static/css/past_events.css
@@ -8,9 +8,9 @@
 
 .past-events h2 {
     color: #ec220c;
+    font-family: 'Alike Angular', serif;
     font-size: 2.5rem;
     margin-bottom: 20px;
-    text-transform: uppercase;
     letter-spacing: 1px;
 }
 
@@ -54,7 +54,7 @@
 }
 
 .event-title {
-    font-family: 'Metal Mania', cursive;
+    font-family: 'Alike Angular', serif;
     font-size: 1.4rem;
     font-weight: bold;
     color: #ec220c;
